[package]
name = "payload"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
egl = "0.2.7"
ctor = "0.2.2"
libc = "0.2.144"
plt-rs = "0.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
retour = "0.3.0"
windows = { version = "0.48.0", features = [
    "Win32_Graphics_OpenGL",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }


[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"
proc-maps = "0.3.1"

[dependencies]
glow = "0.12.2"

egui = { version = "0.22.0" }
egui_glow = "0.22.0"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
backtrace = "0.3.67"
